// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API analytics request contract > ZPublicApiCourseAnalyticsQuery keeps its published shape > ZPublicApiCourseAnalyticsQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "days": {
      "default": 30,
      "description": "Window in days, counted back from today (UTC): 7, 30, 90 or 365. Default: 30.",
      "type": "number",
    },
    "include": {
      "description": "Comma-separated sections to return: summary, funnel. Default: summary.",
      "items": {
        "enum": [
          "summary",
          "funnel",
        ],
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiCourseAnalyticsStudentsQuery keeps its published shape > ZPublicApiCourseAnalyticsStudentsQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "limit": {
      "default": 20,
      "maximum": 50,
      "minimum": 1,
      "type": "integer",
    },
    "page": {
      "default": 1,
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiLearnerAnalyticsParam keeps its published shape > ZPublicApiLearnerAnalyticsParam 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "profileId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
  },
  "required": [
    "profileId",
  ],
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiOrgAnalyticsQuery keeps its published shape > ZPublicApiOrgAnalyticsQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "days": {
      "default": 30,
      "description": "Window in days, counted back from today (UTC): 7, 30, 90 or 365. Default: 30.",
      "type": "number",
    },
    "include": {
      "description": "Comma-separated sections to return: overview, traffic, countries, funnel, courseTypes, topCourses, loginActivity, compliance. Default: overview.",
      "items": {
        "enum": [
          "overview",
          "traffic",
          "countries",
          "funnel",
          "courseTypes",
          "topCourses",
          "loginActivity",
          "compliance",
        ],
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
    "limit": {
      "default": 5,
      "description": "Max rows in list sections (overview lists, topCourses, countries). 1-20, default 5.",
      "maximum": 20,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;
